Flicker fix + Event pagination
The header’s display is set to none by default, otherwise it flickers
at the start of the landing page due to the delay in loading the script
that used to set it to none.

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -6,6 +6,7 @@ footer {
     list-style: none;
     width: 180px;
     display: inline-block;
+    margin-left: 0px;
 
     .fb-icon {
       float: right;
