--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -17,11 +17,11 @@
   color: rgba(255, 255, 255, 1);
   font-size: 20vw;
   margin-top: -2.5vw;
-  margin-left: 2vw;
+  margin-left: 2.8vw;
   margin-bottom: 0px;
   position: relative;
   font-family: FairviewRegular;
-  letter-spacing: 1vw;
+  letter-spacing: .7vw;
 }
 
 .title ul {
@@ -138,9 +138,9 @@
   }
 
   .title ul {
-    margin-top: -14.5vw;
+    margin-top: -15.5vw;
     list-style: none;
-    margin-left: 18vw;
+    margin-left: 16.4vw;
     padding-left: 0px;
   }
 
